# geryon

.github/workflows/: docker-publish.yml
apps/images/base/: Dockerfile
apps/images/vnc/: Dockerfile
apps/images/window-manager/: Dockerfile
apps/images/x-server/: Dockerfile
crds/: apprequest.yaml  apptemplate.yaml
crds/example/: request.yml  template.yml
landing/: Dockerfile  init  sesman.ini
operator/: Dockerfile  main.py  pyproject.toml  schemas.py
testing/: tests.yml
