[tool.poetry]
name = "geryon-operator"
version = "0.1.0"
description = "Operator for the Geryon suite"
authors = ["rutgerhartog"]

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "^23.6.0"
kopf = "^1.35.4"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
